# bc_signals

./: .gitignore  Cargo.toml
benches/ready/: change.rs  change_signal.rs  change_src.rs  convert.rs  copy.rs  filter.rs  invert.rs  osc_mult.rs  pumpdump.rs  repeat.rs  set_probability.rs
benches/train/: mm.rs
src/: def_impl.rs  lib.rs
src/ready/: change.rs  change_signal.rs  change_src.rs  convert.rs  copy.rs  filter.rs  invert.rs  mod.rs  osc_mult.rs  peak.rs  pumpdump.rs  ready_imports.rs  ready_trait.rs  repeat.rs  set_probability.rs
src/train/: mm.rs  mod.rs  ready_imports.rs  train_trait.rs
tests/unit/ready/: change.rs  change_signal.rs  change_src.rs  convert.rs  copy.rs  filter.rs  invert.rs  mod.rs  osc_mult.rs  peak.rs  pumpdump.rs  repeat.rs  set_probability.rs  test_funcs.rs
tests/unit/train/: mm.rs  mod.rs  test_funcs.rs
