[package]
name = "bc_signals"
version = "0.1.0"
edition = "2024"

[dependencies]
bc_utils_lg ={ path = "../bc_utils_lg" }
bc_utils = {path = "../bc_utils"}

# ndarray = "0.15"
# burn = {version = "0.18", features = ["wgpu"]}

[dev-dependencies]
criterion = {version = "0.8", features = ["html_reports"]}

[[bench]]
name = "change"
harness = false
path = "benches/ready/change.rs"

[[bench]]
name = "convert"
harness = false
path = "benches/ready/convert.rs"

 [[bench]]
name = "filter"
harness = false
path = "benches/ready/filter.rs"

 [[bench]]
name = "invert"
harness = false
path = "benches/ready/invert.rs"

 [[bench]]
name = "set_probability"
harness = false
path = "benches/ready/set_probability.rs"

 [[bench]]
name = "pumpdump"
harness = false
path = "benches/ready/pumpdump.rs"


[[bench]]
name = "mm"
harness = false
path = "benches/train/mm.rs"