[package]
name = "bc_signals"
version = "0.1.0"
edition = "2024"

[dependencies]
bc_utils_lg ={ path = "../bc_utils_lg" }
bc_utils = {path = "../bc_utils"}

# ndarray = "0.15"
# burn = {version = "0.18", features = ["wgpu"]}

[dev-dependencies]
criterion = {version = "0.8", features = ["html_reports"]}

[[bench]]
name = "change_signal"
harness = false
path = "benches/ready/change_signal.rs"

[[bench]]
name = "change_src"
harness = false
path = "benches/ready/change_src.rs"

[[bench]]
name = "convert"
harness = false
path = "benches/ready/convert.rs"

 [[bench]]
name = "filter"
harness = false
path = "benches/ready/filter.rs"

 [[bench]]
name = "invert"
harness = false
path = "benches/ready/invert.rs"

 [[bench]]
name = "set_probability"
harness = false
path = "benches/ready/set_probability.rs"

 [[bench]]
name = "pumpdump"
harness = false
path = "benches/ready/pumpdump.rs"

[[bench]]
name = "copy"
harness = false
path = "benches/ready/copy.rs"

[[bench]]
name = "repeat"
harness = false
path = "benches/ready/repeat.rs"

[[bench]]
name = "mm"
harness = false
path = "benches/train/mm.rs"